--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="robots" content="noindex" />
-    <title>Example 短网址 - 遇到问题: 找不到页面</title>
+    <title>短网址 - 遇到问题: 找不到页面</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" rel="preload" href="/css/error-styles.css" />
     <script>
