--- a/pages/manage.html
+++ b/pages/manage.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Security-Policy" content="base-uri 'self'; object-src 'none'; form-action 'self'">
     <link rel="icon" href="/favicon.ico" />
     <meta name="robots" content="index, follow" />
-    <title>Example 短网址 - 短链管理工具</title>
+    <title>短网址 - 短链管理工具</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/manage-styles.css" />
     <script src="/js/jquery.min.js"></script>
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="container">
-        <h2><a href="/" style="text-decoration: none; color: inherit; font-size: inherit;">Example 短网址</a></h2>
+        <h2><a href="/" style="text-decoration: none; color: inherit; font-size: inherit;">短网址</a></h2>
         <h1>短链管理工具</h1>
         <form id="apiForm">
             <div>
@@ -60,7 +60,7 @@
         </form>
 
         <noscript>
-            <p>注意：完整使用 Example 短链管理工具需要浏览器支持（启用）JavaScript！</p>
+            <p>注意：完整使用短链管理工具需要浏览器支持（启用）JavaScript！</p>
         </noscript>
 
         <div id="result"></div>
