--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Content-Security-Policy" content="base-uri 'self'; object-src 'none'; form-action 'self'">
     <link rel="icon" href="/favicon.ico" />
     <meta name="robots" content="index, follow" />
-    <title>Example 短网址</title>
+    <title>短网址</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/jquery.min.js"></script>
@@ -22,7 +22,7 @@
 <body>
     <div class="canister">
         <header>
-            <h1>Example 短网址</h1>
+            <h1>短网址</h1>
             <p>提供免费且安全的短网址服务 😎</p>
         </header>
 
@@ -52,7 +52,7 @@
         </div>
 
         <noscript>
-            <p>注意：完整使用 Example 短网址服务需要浏览器支持（启用）JavaScript！</p>
+            <p>注意：完整使用短网址服务需要浏览器支持（启用）JavaScript！</p>
         </noscript>
 
         <footer>
